--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -41,7 +41,7 @@
      </main>
 
      <div class="realizar-pedido__container">
-        <button class="btn-RP">Ir al pago</button>
+        <a class="btn-RP" href="../FRONTEND/VISTAS/cliente-pedido.html">Ir al pago</a>
     </div>
 
     <nav class="nav-app">
@@ -80,6 +80,5 @@
     </nav>
 
     <script src="../FRONTEND/JS/main.js"></script>
-    
 </body>
 </html>
