--- a/FRONTEND/VISTAS/reclamaciones.html
+++ b/FRONTEND/VISTAS/reclamaciones.html
@@ -54,8 +54,8 @@
         <label for="tipoReclamo">Tipo de solicitud</label>
         <select id="tipoReclamo" required>
           <option value="">Seleccione...</option>
-          <option>Reclamo</option>
-          <option>Queja</option>
+          <option value="Reclamo">Reclamo</option>
+          <option value="Queja">Queja</option>
         </select>
       </div>
 
