--- a/FRONTEND/VISTAS/reset-password.html
+++ b/FRONTEND/VISTAS/reset-password.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restablecer Contraseña</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../STYLES/login.css" />
 </head>
 <body>
     <header class="header"></header>
 
     <main class="main">
-        <img src="logo olla.png" alt="Logo La Olla Arequipeña">
+        <img src="../IMAGES/logo olla.png" alt="Logo La Olla Arequipeña">
         <p>Ingresa tu nueva contraseña:</p>
         
         <form id="reset-password-form" class="form-login">
@@ -21,6 +21,6 @@
     </main>
 
     <footer class="footer"></footer>
-    <script src="reset-password.js"></script>
+    <script src="../JS/reset-password.js"></script>
 </body>
 </html>
