--- a/FRONTEND/login.html
+++ b/FRONTEND/login.html
@@ -24,7 +24,7 @@
         </form>
 
         <div class="opciones-extra__container">
-            <label for="">¿Olvidaste tu contraseña?</label>
+            <a href="../FRONTEND/VISTAS/reset-password.html" id="recuperar-contraseña">¿Olvidaste tu contraseña?</a>
             <a href="../FRONTEND/VISTAS/register.html" id="crear-cuenta">Crear cuenta</a>
         </div>
     </main>
